<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageButton
        android:id="@+id/b1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="27dp"
        android:layout_weight="1"
        android:background="@drawable/circle_background"
        android:contentDescription="button for faculty activity"
        android:elevation="9dp"
        app:srcCompat="@mipmap/teacher_fore" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:text="@string/faculty"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/circle_background"
        android:contentDescription="button for services activity"
        android:elevation="9dp"
        app:srcCompat="@mipmap/broom_fore" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:text="@string/services"
        android:textStyle="bold"/>

    <ImageButton
        android:id="@+id/b3"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@drawable/circle_background"
        android:contentDescription="button for emergency activity"
        android:elevation="9dp"
        app:srcCompat="@mipmap/emergency_fore" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:text="@string/emergency"
        android:textStyle="bold"/>

</LinearLayout>